<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:text="@string/currency" />

    <TextView
        android:id="@+id/currency_tv"
        style="@style/data_style"
        android:layout_width="wrap_content"
        android:text="@string/default_string"/>

    <TextView
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text="@string/currency_long" />

    <TextView
        android:id="@+id/currency_long_tv"
        style="@style/data_style"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:text="@string/default_string"/>

    <TextView
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text="@string/txn_value" />

    <TextView
        android:id="@+id/txn_tv"
        style="@style/data_style"
        android:layout_width="wrap_content"
        android:text="@string/default_string"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>